# s2plot

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  ModuleConfig.cmake.in~  OmegalibConfig.cmake  README.md  cmake_install.cmake  fragmentShader.frag  s2plot.cpp  s2plot.cpp~  s2plot.h  s2plot.h~  s2plot.kdev4
.kdev4/: s2plot.kdev4
example/: .cproject  .eqcfg.eqc  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  example.kdev4  fragmentShader.frag  fragmentShader.frag~  myapp  myapp.cpp  output.txt  s2plotApp  s2plotApp.cfg.bak  s2plotApp.cpp  vertexShader.vert  vertexShader.vert~
example/.kdev4/: example.kdev4
example1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example1.cpp
s2plot/: s2Cube.h  s2Factory.h  s2Geom.h  s2Module.h  s2PolyObject.h  s2Primitive.h  s2Program.h  s2RenderPass.h  s2Triangle.h  s2Vertex.h  s2plot.h  s2plotCube.h  s2plotEngine.h  s2plotFactory.h  s2plotGeom.h  s2plotModule.h  s2plotPoint.h  s2plotPrimitiveFacet.h  s2plotProgram.h  s2plotRenderPass.h  s2plotRenderableCube.h  s2plotRenderableObject.h  s2plotRenderablePolyObject.h  s2plotShader.h  s2plotTransform.h  s2plotTriangle.h  s2plotVertex.h
src/: .kdev_include_paths  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  fragmentShader.frag  s2Cube.cpp  s2Factory.cpp  s2Geom.cpp  s2Module.cpp  s2PolyObject.cpp  s2Primitive.cpp  s2Program.cpp  s2RenderPass.cpp  s2Shader.cpp  s2Triangle.cpp  s2Vertex.cpp  s2plot.cpp  s2plot.h  s2plotEngine.cpp  s2plotFactory.cpp  s2plotModule.cpp  s2plotPoint.cpp  s2plotProgram.cpp  s2plotRenderPass.cpp  s2plotRenderableCube.cpp  s2plotRenderableObject.cpp  s2plotRenderablePloyObject.cpp  s2plotTransform.cpp  s2plotTriangle.cpp  s2plotVertex.cpp  vertexShader.vert
test/: test.cpp  test.h  test2.cpp
test/templates/: Cube.cpp  Cube.h  PrimitiveFacet.cpp  PrimitiveFacet.h  RenderableObject.cpp  RenderableObject.h  RenderablePolyObject.cpp  RenderablePolyObject.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  mainheader.h  template_test_project
